--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
     <!-- PDF.js library for PDF parsing -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     
+    <!-- Core utilities and constants -->
+    <script src="constants.js"></script>
+    <script src="utils.js"></script>
     <script src="storage.js"></script>
     <script src="csv-parser.js"></script>
     <script src="pdf-parser.js"></script>
